[package]
name = "ffiruby"
version = "1.1.1" # x-release-please-version
edition = "2021"
rust-version = "1.66"

[lib]
name = "rbspy"
crate-type = ["cdylib"]

[dependencies]
rbspy = { version = "0.50" }
remoteprocess = "0.5"
pretty_env_logger = "0.5"
log = "0.4"
libc = "0.2"
anyhow = "1.0"
thiserror = "2.0"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "query", "native-tls"] }
uuid = { version = "1.20.0", features = ["v4"] }
url = "2.2.2"
libflate = "2.1.0"
prost = "0.14"
serde_json = "1.0.115"
lazy_static = "1.5.0"
